--- a/FoodWaste.Application/FoodWaste.Application.csproj
+++ b/FoodWaste.Application/FoodWaste.Application.csproj
@@ -21,6 +21,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+
   </PropertyGroup>
 
 </Project>
