--- a/FoodWaste.Infrastructure/FoodWaste.Infrastructure.csproj
+++ b/FoodWaste.Infrastructure/FoodWaste.Infrastructure.csproj
@@ -21,6 +21,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+
   </PropertyGroup>
 
 </Project>
